--- a/app/src/components/EventIcon/styles.scss
+++ b/app/src/components/EventIcon/styles.scss
@@ -15,4 +15,14 @@
     width: 48px;
     height: 48px;
   }
+
+  &--xl {
+    width: 64px;
+    height: 64px;
+  }
+
+  &--xxl {
+    width: 128px;
+    height: 128px;
+  }
 }
