--- a/app/src/components/RollupCard/styles.scss
+++ b/app/src/components/RollupCard/styles.scss
@@ -5,6 +5,10 @@
     text-align: center;
   }
 
+  .event-icon {
+    fill: rgba(#000, .8);
+  }
+
   &--sleep_toggle .rollup-card__header {
     background-color: #4158d0;
     background-image: linear-gradient(43deg, #4158d0 0%, #c850c0 46%, #ffcc70 100%);
